adiciona repositórios e configurações de conexão com o banco de dados

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=bank
+
+spring.datasource.url=jdbc:mysql://localhost:3306/gestao_bancaria
+
+spring.datasource.username=root
+
+spring.datasource.password=1234567
