--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.application.name=bank
 
-spring.datasource.url=jdbc:mysql://localhost:3306/gestao_bancaria
-
-spring.datasource.username=root
-
-spring.datasource.password=1234567
+spring.datasource.url=jdbc:mysql://localhost:3306/relational_database
+spring.datasource.username=mysql_default
+spring.datasource.password=RelationalDatabase@2024!
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.check-template-location=true
