--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=bank
 
-spring.datasource.url=jdbc:mysql://localhost:3306/gestao_bancaria
+spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
 
-spring.datasource.username=root
+spring.datasource.username=${DB_USER}
 
-spring.datasource.password=1234567
+spring.datasource.password=${DB_PASSWORD}
